--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,15 @@ version: '3'
 services:
   db:
     build:
-      context: .
+      context: db/
     environment:
-      MYSQL_ROOT_PASSWORD: ""
+      MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: identity-server
       MYSQL_USER: identity
       MYSQL_PASSWORD: identity
     container_name: identity-db
+    volumes:
+      - .:/docker-entrypoint-initdb.d/
     ports:
       - "3306:3306"
     tty: true
@@ -16,10 +18,10 @@ services:
     build:
       context: .
     volumes:
-      - ".:/go"
+      - .:/go
     container_name: identity-server
     ports:
-      - "8080:8080"
+      - 8081:8081
     tty: true
     depends_on:
       - db
