--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - backend
     environment:
       ENV: "prod"
+      CONFIG_FILE: "etc/config.yaml"
   identity-server-test:
     build: .
     volumes:
@@ -25,6 +26,7 @@ services:
       - backend
     environment:
       ENV: "test"
+      CONFIG_FILE: "etc/config_test.yaml"
 
   mysql-development:
     build: ./MySQL
