added issuer option to jwt

--- a/etc/config_test.yaml
+++ b/etc/config_test.yaml
@@ -1,4 +1,6 @@
 env: "test"
 port: ":8088"
 source: "/var/tmp/identity.db"
-signing-key: "thisistobereplaced"
+jwt:
+  signing-key: "this-should-be-secret-shared-only-to-client"
+  issuer: "name-of-the-organisation"
