--- a/etc/config.yaml
+++ b/etc/config.yaml
@@ -1,3 +1,5 @@
 env: "dev"
 port: ":8095"
-signing-key: "thisistobereplaced"
+jwt:
+  signing-key: "this-should-be-secret-shared-only-to-client"
+  issuer: "name-of-the-organisation"
