--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,33 +1,25 @@
-# Golang CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-go/ for more details
 version: 2
 jobs:
   build:
     docker:
-      # specify the version
       - image: circleci/golang:1.13
-      - image: circleci/mysql:8.0.4
+      - image: circleci/mysql:8.0.3
         environment:
           MYSQL_ROOT_PASSWORD: root
           MYSQL_DATABASE: identity_db
           MYSQL_USER: root
           MYSQL_PASSWORD: root
           MYSQL_HOST: localhost
-    working_directory: /go/src/github.com/riyadennis/identity-server
     steps:
       - checkout
       - run:
-          # Our primary container isn't MYSQL so run a sleep command until it's ready.
-        name: Waiting for MySQL to be ready
+        name: Install MySQL CLI
         command: |
-            for i in `seq 1 10`;
-            do
-              nc -z 127.0.0.1 3306 && echo Success && exit 0
-              echo -n .
-              sleep 1
-            done
-            echo Failed waiting for MySQL && exit 1
-      # specify any bash command here prefixed with `run: `
+          sudo apt-get install default-mysql-client
       - run: go get -v -t -d ./...
       - run: go test -v ./...
+workflows:
+  version: 2
+  build-deploy:
+    jobs:
+      - build
