--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,37 @@
-# Golang CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-go/ for more details
 version: 2
 jobs:
   build:
     docker:
-      # specify the version
-      - image: circleci/golang:1.13
+      - image: circleci/golang:1.13 # The primary container where steps are run
+      - image: circleci/mysql:5.7.18
+        security_opt:
+          - seccomp:unconfined
+        environment:
+          MYSQL_ROOT_PASSWORD: secret
+          MYSQL_DATABASE: identity_db
+          MYSQL_USER: identity_user
+          MYSQL_PASSWORD: root
 
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/postgres:9.4
-    working_directory: /go/src/github.com/riyadennis/identity-server
     steps:
       - checkout
-
-      # specify any bash command here prefixed with `run: `
+      - run:
+          name: install dockerize
+          command: wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && sudo tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
+          environment:
+            DOCKERIZE_VERSION: v0.3.0
+      - run:
+          name: Wait for db
+          command: dockerize -wait tcp://localhost:3306 -timeout 1m
+      - run:
+          name: Install MySQL CLI; Import dummy data; run an example query
+          command: |
+            sudo apt-get install default-mysql-client
+#            mysql -h 127.0.0.1 -u root -proot identity_db < sql-data/dummy.sql
+#            mysql -h 127.0.0.1 -u user -ppassw0rd --execute="SELECT * FROM test_db.Persons"
       - run: go get -v -t -d ./...
       - run: go test -v ./...
+workflows:
+  version: 2
+  build-deploy:
+    jobs:
+      - build
