--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,12 @@ jobs:
 #            mysql -h 127.0.0.1 -u user -ppassw0rd --execute="SELECT * FROM test_db.Persons"
       - run: go get -v -t -d ./...
       - run: go test -v ./...
+      - run:
+          name: Running web server
+            background: true
+            command: |
+              printenv | grep MYSQL > .env
+              go run main.go
 workflows:
   version: 2
   build-deploy:
