--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,10 +8,25 @@ jobs:
           MYSQL_ROOT_PASSWORD: secret
           MYSQL_DATABASE: identity_db
           MYSQL_USER: identity_user
-          MYSQL_PASSWORD: root
-
+          MYSQL_PASSWORD: secret
+    references:
+      set_environment_variables: &set_environment_variables
+        run:
+          name: Set Environment Variables
+          command: |
+            echo 'export CI_SHA1=$CIRCLE_SHA1' >> ${BASH_ENV}
+            echo 'export CI_BRANCH=$CIRCLE_BRANCH' >> ${BASH_ENV}
+            echo 'export CI_BUILD_NUM=$CIRCLE_BUILD_NUM' >> ${BASH_ENV}
+            echo 'export CI_TAG=$CIRCLE_TAG' >> ${BASH_ENV}
+            echo "export GO111MODULE=on"  >> ${BASH_ENV}
+            echo "export MYSQL_USERNAME=identity_user"  >> ${BASH_ENV}
+            echo "export MYSQL_PASSWORD=secret"  >> ${BASH_ENV}
+            echo "export MYSQL_HOST=localhost"  >> ${BASH_ENV}
+            echo "export MYSQL_DATABASE=identity_db"  >> ${BASH_ENV}
+            echo "export MYSQL_PORT=3306"  >> ${BASH_ENV}
     steps:
       - checkout
+      - *set_environment_variables
       - run:
           name: install dockerize
           command: wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && sudo tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
@@ -21,11 +36,25 @@ jobs:
           name: Wait for db
           command: dockerize -wait tcp://localhost:3306 -timeout 1m
       - run:
+          # Our primary container isn't Maria so run a sleep command until it's ready.
+          name: Waiting for mysql to be ready
+          command: |
+            for i in `seq 1 10`;
+            do
+            nc -z 127.0.0.1 3306 && echo Success && exit 0
+            echo -n .
+            sleep 1
+            done
+            echo Failed waiting for MSYQL && exit 1
+      - run:
           name: Install MySQL CLI; Import dummy data; run an example query
           command: |
-            sudo apt-get install default-mysql-client
+            sudo apt-get update && sudo apt-get install libxml2-dev default-mysql-client
       - run: go get -v -t -d ./...
-      - run: go test -v ./...
+      - run:
+          command: |
+            printenv | grep MYSQL > .env_test
+            go test -v ./... -count=1
       - run:
           name: Running web server
           background: true
