--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,7 @@ jobs:
             echo 'export CI_BUILD_NUM=$CIRCLE_BUILD_NUM' >> ${BASH_ENV}
             echo 'export CI_TAG=$CIRCLE_TAG' >> ${BASH_ENV}
             echo "export GO111MODULE=on"  >> ${BASH_ENV}
+            echo "export BASE_PATH=/home/circleci/go/src/github.com/riyadennis/identity-server"  >> ${BASH_ENV}
             echo "export MYSQL_USERNAME=identity_user"  >> ${BASH_ENV}
             echo "export MYSQL_PASSWORD=secret"  >> ${BASH_ENV}
             echo "export MYSQL_HOST=localhost"  >> ${BASH_ENV}
