fix(working-directory):added working directory

--- a/.env_test
+++ b/.env_test
@@ -5,3 +5,4 @@ MYSQL_USERNAME="newuser"
 MYSQL_PASSWORD="password"
 MYSQL_PORT="3306"
 MYSQL_HOST="127.0.0.1"
+BASE_PATH="/Users/riyadennis/go/src/github.com/riyadennis/identity-server/"
