--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -13,6 +13,7 @@ builds:
       - linux
       - windows
       - darwin
+    main: ./app/auth-api/main.go
 archives:
   - replacements:
       darwin: Darwin
