--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -31,3 +31,8 @@ changelog:
     exclude:
       - '^docs:'
       - '^test:'
+github_urls:
+  upload: https://github.com/riyadennis/identity-server/releases
+  download: https://github.com/riyadennis/identity-server/
+  # set to true if you use a self-signed certificate
+  skip_tls_verify: false
