--- a/zarf/identity/values.yaml
+++ b/zarf/identity/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: riyadennis/identity-server
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "latest"
+  tag: "1.0.7"
 
 imagePullSecrets: []
 nameOverride: ""
