--- a/zarf/identity/values.yaml
+++ b/zarf/identity/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: riyadennis/identity-server
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "1.2.0"
+  tag: "1.3.0"
 
 imagePullSecrets: []
 nameOverride: ""
@@ -37,7 +37,10 @@ securityContext: {}
   # runAsUser: 1000
 
 service:
-  type: ClusterIP
+  name: identity
+  type: NodePort
+  externalPort: 8089
+  internalPort: 8089
   port: 80
 
 ingress:
@@ -46,12 +49,12 @@ ingress:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
+    - host: identity-server.local
       paths:
       - path: /
         backend:
-          serviceName: chart-example.local
-          servicePort: 80
+          serviceName: identity-server.local
+          servicePort: 8089
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
