--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
     working_directory: ~/go/src/github.com/riyadennis/identity-server
     parallelism: 2
     docker:
-      - image: circleci/golang:1.16 # The primary container where steps are run
+      - image: circleci/golang:1.17 # The primary container where steps are run
       - image: circleci/mysql:5.7.18
         environment:
           MYSQL_ROOT_PASSWORD: secret
@@ -69,9 +69,21 @@ jobs:
             GOOS: "linux"
           command: |
             GOOS=linux go build -o main app/auth-api/main.go
+  release:
+    docker:
+        - image: circleci/golang:1.17
+    steps:
+      - checkout
+      - run: curl -sL https://git.io/goreleaser | bash
+    filters:
+      branches:
+        ignore: /.*/
+      tags:
+        only: /v[0-9]+(\.[0-9]+)*(-.*)*/
 workflows:
   version: 2
   build-deploy:
     jobs:
       - build
+      - release
 
