--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,7 +74,9 @@ jobs:
         - image: circleci/golang:1.17
     steps:
       - checkout
-      - run: curl -sL https://git.io/goreleaser | bash
+      - run:
+          export GITHUB_TOKEN=${GITHUB_TOKEN}
+          curl -sL https://git.io/goreleaser | bash
     filters:
       branches:
         ignore: /.*/
