revert image change for tagging

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,6 +78,7 @@ jobs:
           command: |
             apt-get update -y
             apt-get install -y git curl
+            git init
       - run:
           name: install autotag binary
           command: |
