--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,8 @@ jobs:
           MYSQL_USER: identity_user
           MYSQL_PASSWORD: secret
     references:
-      set_environment_variables: &set_environment_variables
+      set_environment_variables:
+        &set_environment_variables
         run:
           name: Set Environment Variables
           command: |
@@ -32,7 +33,11 @@ jobs:
       - *set_environment_variables
       - run:
           name: install dockerize
-          command: wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && sudo tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
+          command: wget
+            https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
+            && sudo tar -C /usr/local/bin -xzvf
+            dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && rm
+            dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
           environment:
             DOCKERIZE_VERSION: v0.3.0
       - run:
@@ -92,6 +97,8 @@ jobs:
           name: build and push releases
           command: |
             curl -sL https://git.io/goreleaser | bash -s -- --parallelism=2 --rm-dist
+    # The resource_class feature allows configuring CPU and RAM resources for each job. Different resource classes are available for different executors. https://circleci.com/docs/2.0/configuration-reference/#resourceclass
+    resource_class: large
 workflows:
   version: 2
   build-deploy:
@@ -104,4 +111,3 @@ workflows:
             branches:
               only:
                 - master
-
