--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,17 +13,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    env:
-      MYSQL_USERNAME: 'identity-server'
-      MYSQL_PASSWORD: 'password'
-      MYSQL_DATABASE: 'identity-server'
-      MYSQL_PORT: '3306'
-      MYSQL_HOST: '127.0.0.1'
-      MIGRATION_PATH: 'migrations'
-      ENV: 'test'
-      PORT: '8089'
-      KEY: 'this-should-be-secret-shared-only-to-client'
-      ISSUER: 'github-actions'
+  
     steps:
     - uses: actions/checkout@v4
 
@@ -35,18 +25,26 @@ jobs:
 
     - name: Build
       run: go build -v ./...
-    
-    - name: Shutdown Ubuntu MySQL (SUDO)
-      run: sudo service mysql stop # Shutdown the Default MySQL, "sudo" is necessary, please not remove it
 
-    - name: Set up MySQL
-      uses: mirromutth/mysql-action@v1.1
+  test:   
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Set up Go
+      uses: actions/setup-go@v5
       with:
-        mysql version: '8.0'
-        mysql database: 'identity-server'
-        mysql root password: 'root'
-        mysql user: 'identity-server'
-        mysql password: 'password'
+        go-version-file: 'go.mod'
+        cache: true
 
     - name: Test
       run: go test -v ./...
+
+    - name: generate test coverage
+      run: go test ./... -coverprofile=./cover.out -covermode=atomic -coverpkg=./...
+
+    - name: check test coverage
+      uses: vladopajic/go-test-coverage@v2
+      with:
+        config: ./testcoverage.yaml
