--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -41,6 +41,17 @@ jobs:
     - name: Test
       run: go test -v ./...
 
+  coverage:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Set up Go
+      uses: actions/setup-go@v5
+      with:
+        go-version-file: 'go.mod'
+        cache: true
+        
     - name: generate test coverage
       run: go test ./... -coverprofile=./cover.out -covermode=atomic -coverpkg=./...
 
