--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -43,8 +43,15 @@ jobs:
 
   coverage:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read                # 'read' access to repository contents
+      pull-requests: write
+      pages: write
     steps:
     - uses: actions/checkout@v4
+#      with:
+#       persist-credentials: false
+#       fetch-depth: 0
 
     - name: Set up Go
       uses: actions/setup-go@v5
@@ -59,3 +66,29 @@ jobs:
       uses: vladopajic/go-test-coverage@v2
       with:
         config: ./testcoverage.yaml
+
+    - name: Go Coverage Badge  # Pass the `coverage.out` output to this action
+      uses: tj-actions/coverage-badge-go@v3
+      with:
+        filename: cover.out
+
+    - name: Verify Changed files
+      uses: tj-actions/verify-changed-files@v16
+      id: verify-changed-files
+      with:
+        files: README.md
+
+    - name: Commit changes
+      if: steps.verify-changed-files.outputs.files_changed == 'true'
+      run: |
+            git config --local user.email "action@github.com"
+            git config --local user.name "GitHub Action"
+            git add README.md
+            git commit -m "chore: Updated coverage badge."
+
+    - name: Push changes
+      if: steps.verify-changed-files.outputs.files_changed == 'true'
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ github.token }}
+        branch: ${{ github.head_ref }}
