--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -64,12 +64,12 @@ jobs:
         go tool cover -func=coverage.out -o=coverage.out
 
     - name: Go Coverage Badge  # Pass the `coverage.out` output to this action
-      uses: tj-actions/coverage-badge-go@v3
+      uses: tj-actions/coverage-badge-go@4cc080a60b13208c3e81ead8b55ec1bd451c336b
       with:
         filename: coverage.out
 
     - name: Verify Changed files
-      uses: tj-actions/verify-changed-files@v17
+      uses: tj-actions/verify-changed-files@4616eed12cee617b16fa9d0ef524f883d2a48a48
       id: verify-changed-files
       with:
         files: README.md
@@ -84,6 +84,6 @@ jobs:
 
     - name: Push changes
       if: steps.verify-changed-files.outputs.files_changed == 'true'
-      uses: ad-m/github-push-action@master
+      uses: ad-m/github-push-action@77c5b412c50b723d2a4fbc6d71fb5723bcd439aa
       with:
         branch: ${{ github.head_ref }}
