fix: exclude test files from sonar scanning

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,9 @@ sonar.projectKey=example
 
 sonar.sources=.
 sonar.exclusions=**/*_test.go,**/vendor/**
+sonar.go.exclusions=**/*_test.go,**/vendor/**
 
+sonar.tests=.
 sonar.test.inclusions=**/*_test.go
 sonar.test.exclusions=**/vendor/**
 
