fix: rmeove security analysis for test files

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,3 +10,4 @@ sonar.test.exclusions=**/vendor/**
 
 #go test ./... -v -coverpkg=./... -coverprofile=coverage.out
 sonar.go.coverage.reportPaths=coverage.out
+sonar.security.exclusions=**/*_test.go
