feat: adding gRPC server for login (#89)
* feat: adding gRPC server for login

* fix: failing tests after adding gRPC server

* chore: Updated coverage badge.

* fix: adding gRPC port as env var

* fix sonar security alets

---------

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/zarf/compose.yaml
+++ b/zarf/compose.yaml
@@ -11,6 +11,13 @@ services:
       - MYSQL_USER=identity-server
       - MYSQL_PASSWORD=password
   go-server:
+    develop:
+      watch:
+        - action: sync
+          path: ../
+          target: /home/webuser
+        - action: rebuild
+          path: go.mod
     build:
       context: ../
       dockerfile: Dockerfile
@@ -18,7 +25,8 @@ services:
       - 8095:8095
     environment:
       - ENV=dev
-      - PORT=8095
+      - REST_PORT=8095
+      - GRPC_PORT=8095
       - MYSQL_USERNAME=identity-server
       - MYSQL_PASSWORD=password
       - MYSQL_HOST=mysql-server
