--- a/zarf/compose.yaml
+++ b/zarf/compose.yaml
@@ -68,3 +68,32 @@ services:
       - mysql-server
     links:
       - mysql-server
+  go-gql-server:
+    restart: on-failure
+    develop:
+      watch:
+        - action: sync
+          path: ../
+          target: /home/webuser
+        - action: rebuild
+          path: go.mod
+    build:
+      context: ../
+      dockerfile: ../identity-server/app/gql/GQLDockerfile
+    ports:
+      - 8097:8097
+    environment:
+      - ENV=dev
+      - GRAPHQL_PORT=8097
+      - MYSQL_USERNAME=identity-server
+      - MYSQL_PASSWORD=password
+      - MYSQL_HOST=mysql-server
+      - MYSQL_DATABASE=identity-server
+      - MYSQL_PORT=3306
+      - ISSUER=open source
+      - KEY_PATH=/tmp/keys
+      - MIGRATION_PATH=/home/webuser/migration
+    depends_on:
+      - mysql-server
+    links:
+      - mysql-server
